kustomize/overlays/prod/computate.org/deployment-echo-server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echo-server
  namespace: computateorg
  labels:
    app.kubernetes.io/instance: echo-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: echo-server
    app.kubernetes.io/version: 0.6.0
    helm.sh/chart: echo-server-0.5.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: echo-server
      app.kubernetes.io/name: echo-server
  template:
    spec:
      containers:
        - resources:
            limits:
              cpu: '512m'
              memory: 512Mi
            requests:
              cpu: '512m'
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          name: echo-server
          livenessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
              httpHeaders:
                - name: x-echo-code
                  value: '200'
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext: {}
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: 'docker.io/ealen/echo-server:0.9.2'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: echo-server
      serviceAccount: echo-server
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
