kustomize/overlays/prod/computate.org/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: computateorg-worker
    app.kubernetes.io/instance: computateorg-worker
    app.kubernetes.io/name: computateorg-worker
    deployment: computateorg-worker
  name: computateorg-worker
  namespace: computateorg
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: computateorg-worker
      app.kubernetes.io/instance: computateorg-worker
      app.kubernetes.io/name: computateorg-worker
      deployment: computateorg-worker
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: computateorg-worker
        app.kubernetes.io/instance: computateorg-worker
        app.kubernetes.io/name: computateorg-worker
        deployment: computateorg-worker
    spec:
      containers:
      - env:
        - name: ENABLE_DATABASE
          value: 'true'
        - name: ENABLE_ZOOKEEPER_CLUSTER
          value: 'true'
        - name: CLUSTER_PUBLIC_PORT
          value: '2181'
        - name: SITE_SRC
          value: /home/default/computate.org
        - name: SITE_ZONE
          value: America/Denver
        - name: SITE_LOCALE
          value: en-US
        - name: SITE_PORT
          value: "10200"
        - name: SITE_HOST_NAME
          value: computateorg
        - name: SITE_NAME
          value: computate.org-worker
        - name: SITE_BASE_URL
          value: https://computate.org
        - name: SITE_PUBLIC_URL
          value: https://computate.org
        - name: CLUSTER_PORT
          value: "10201"
        - name: SSL_VERIFY
          value: "true"
        - name: SITE_INSTANCES
          value: "1"
        - name: WORKER_POOL_SIZE
          value: "2"
        - name: VERTX_MAX_EVENT_LOOP_EXECUTE_TIME
          value: "30"
        - name: VERTX_MAX_WORKER_EXECUTE_TIME
          value: "6000"
        - name: VERTX_WARNING_EXCEPTION_SECONDS
          value: "60"
        - name: NUMBER_EXECUTORS
          value: "2"
        - name: GIT_ORG
          value: computate-org
        - name: SITE_STATIC_NAME
          value: computate.org-static
        - name: SITE_STATIC_REPO
          value: git@github.com:computate-org/computate.org-static.git
        - name: STATIC_PATH
          value: /home/default/computate.org-static/webawesome
        - name: I18N_PATHS
          value: '["/home/default/computate-vertx/src/main/resources/org/computate/i18n/i18n_enUS.yaml"]'
        - name: TEMPLATE_PATH
          value: /home/default/computate.org-static/webawesome/templates
        - name: STATIC_BASE_URL
          value: https://computate.neocities.org
        - name: SITE_LOGO_URI
          value: /svg/logo-dark.svg
        - name: DYNAMIC_PAGE_PATHS
          value: '["en-us/article"]'
        - name: FONTAWESOME_STYLE
          value: 'fa-duotone fa-regular '
        - name: FONTAWESOME_KIT
          value: <script src="https://kit.fontawesome.com/59d19567d5.js" crossorigin="anonymous"></script>
        - name: WEB_COMPONENTS_PREFIX
          value: wa-
        - name: WEB_COMPONENTS_CSS
          value: <link rel="stylesheet" href="https://early.webawesome.com/webawesome@3.0.0-alpha.10/dist/styles/themes/default.css"
            /><link rel="stylesheet" href="https://early.webawesome.com/webawesome@3.0.0-alpha.10/dist/styles/webawesome.css"
            /><link rel="stylesheet" href="https://early.webawesome.com/webawesome@3.0.0-alpha.10/dist/styles/themes/glossy.css"
            />
        - name: WEB_COMPONENTS_JS
          value: <script type="module" src="https://early.webawesome.com/webawesome@3.0.0-alpha.10/dist/webawesome.loader.js"></script>
        - name: SITE_THEME
          value: dark
        - name: SITE_POWERED_BY_NAME
          value: Google Kubernetes Engine
        - name: SITE_POWERED_BY_URL
          value: https://cloud.google.com/kubernetes-engine
        - name: SITE_POWERED_BY_IMAGE_URI
          value: /svg/google-gke.svg
        - name: DEFAULT_MAP_LOCATION
          value: '{ "coordinates": [ -112.41303037254853, 41.010576529076815 ], "type": "Point" }'
        - name: DEFAULT_MAP_ZOOM
          value: "17"
        - name: ENABLE_OPEN_TELEMETRY
          value: "false"
        - name: ENABLE_WORKER_VERTICLE
          value: "true"
        - name: ENABLE_IMPORT_DATA
          value: "true"
        - name: DOWNLOAD_PATH
          value: /opt/computate.org-downloads
        - name: ENABLE_EMAIL
          value: "true"
        - name: ENABLE_RABBITMQ
          value: "false"
        - name: PUBLIC_SEARCH_URI
          value: /en-us/search
        - name: USER_SEARCH_URI
          value: /en-us/user-search
        image: quay.io/computateorg/computate.org:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 10
        name: computateorg
        ports:
        - containerPort: 10200
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 750m
            ephemeral-storage: 1Gi
            memory: 768Mi
          requests:
            cpu: 750m
            ephemeral-storage: 1Gi
            memory: 768Mi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/computate.org-downloads
          name: computateorg-downloads
      dnsPolicy: ClusterFirst
      hostAliases:
      - hostnames:
        - sso.computate.org
        ip: 34.36.213.80
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
      volumes:
      - name: computateorg-downloads
        persistentVolumeClaim:
          claimName: computateorg-downloads
