kustomize/overlays/prod/computate.org/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: computateorg
  name: computateorg
  labels:
    app.kubernetes.io/instance: computateorg
    app.kubernetes.io/name: computateorg
    deployment: computateorg
    app: computateorg
spec:
  ports:
    - name: http
      port: 10200
      protocol: TCP
      targetPort: 10200
    - name: cluster
      port: 10201
      protocol: TCP
      targetPort: 10201
  selector:
    app.kubernetes.io/instance: computateorg
    app.kubernetes.io/name: computateorg
    deployment: computateorg
    app: computateorg
  sessionAffinity: None
  type: ClusterIP
